Safari WIP fix footer ( Still breaks on large pages)

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -79,7 +79,6 @@ body {
 .footer {
   background-color: $frost-color-blue-1;
   width: 100%;
-  height:100%;
   color: $frost-color-white;
   clear:both;
   margin-top: 50px;
@@ -103,7 +102,6 @@ body {
   padding-left: 20px;
   padding-bottom: 10px;
   background-color: darken($frost-color-blue-1, 4%);
-  height: 100%;
 }
 
 .footerHeading {
